2020-07-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Drop libbalsa_{radio,toggle}_activated

	https://developer.gnome.org/gio/stable/GActionMap.html#GActionEntry:
	Since GLib 2.40, [activate] can be NULL for stateful actions,
	in which case the default handler is used. For boolean-stated
	actions with no parameter, this is a toggle. For other state
	types (and parameter type equal to the state type) this will be a
	function that just calls change_state…

	* libbalsa/application-helpers.c (libbalsa_window_add_accelerator):
	* libbalsa/application-helpers.h:
	* libbalsa/source-viewer.c (libbalsa_show_message_source):
	* src/ab-main.c (get_main_menu):
	* src/main-window.c:
	* src/message-window.c:
	* src/sendmsg-window.c:

2020-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	body: If a part with content-type "message/external-body" has
	access-type URL, use its URL parameter as the filename, instead
	of g_mime_part_get_filename(), so that the previous commit can
	work.

	* libbalsa/body.c (libbalsa_message_body_set_filename): get the
	  "access-type" parameter; if it is non-NULL and equals
	  "URL", get the "URL" parameter and use it as the part's
	  filename; we do not need to verify that the content-type is
	  "message/external-body", as the "access-type" parameter is
	  NULL for any other content-type.

2020-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose-window: Attachments of type "message/external-body" must
	have a filename, because libbalsa_message_create_mime_message()
	uses it to distinguish access-type=URL from
	access-type=local-file.

	* src/sendmsg-window.c (attachment2message):

2020-07-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose-window: Handle attachments of type
	"message/external-body" when continuing a draft message.

	* src/sendmsg-window.c (add_urlref_attachment): do not free the
	    URL string;
	  (attachments_add): free it here;
	  (add_file_attachment): new helper;